--- a/pv_analysis.ipynb
+++ b/pv_analysis.ipynb
@@ -93220,7 +93220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -93678,6 +93678,326 @@
     "# Run app and display result inline in the notebook\n",
     "app.run_server(mode='external', debug=True)"
    ]
+  },
+  {
+   "source": [
+    "#### Dash 3"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Dash app running on http://127.0.0.1:8050/\n"
+     ]
+    }
+   ],
+   "source": [
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
+    "from jupyter_dash import JupyterDash\n",
+    "import dash_core_components as dcc\n",
+    "import dash_html_components as html\n",
+    "from dash_extensions import Download\n",
+    "from dash_extensions.snippets import send_data_frame\n",
+    "from dash.dependencies import Input, Output\n",
+    "import numpy as np\n",
+    "import pandas\n",
+    "import json\n",
+    "\n",
+    "button1_state = 0\n",
+    "button2_state = 0\n",
+    "\n",
+    "customer_feather = 'data/customer_cleansed.feather'\n",
+    "weather_feather = 'data/weather_cleansed.feather'\n",
+    "\n",
+    "customer =  pandas.read_feather(customer_feather)\n",
+    "weather = pandas.read_feather(weather_feather)\n",
+    "\n",
+    "# mapbox_token = open(\".mapbox_token\").read()\n",
+    "\n",
+    "with open('data/locations.txt') as json_file:\n",
+    "    locations = json.load(json_file)\n",
+    "       \n",
+    "# Build App\n",
+    "external_stylesheets = ['https://codepen.io/chriddyp/pen/bWLwgP.css']\n",
+    "\n",
+    "app = JupyterDash(__name__, external_stylesheets=external_stylesheets, prevent_initial_callbacks=True)\n",
+    "\n",
+    "colors = {\n",
+    "    'background': '#FFFFFF',\n",
+    "    'text': '#091D58',\n",
+    "    'text_sub': '#07AD93',\n",
+    "    'text_site': '#430B95'\n",
+    "}\n",
+    "\n",
+    "app.layout = html.Div(style={'backgroundColor': colors['background']}, children = [\n",
+    "    html.Div(children=[\n",
+    "\n",
+    "        html.H1('Pv data visualization', style={'textAlign': 'center', 'color': colors['text']}),\n",
+    "\n",
+    "        #---------------------\n",
+    "        html.Div([\n",
+    "            html.Div([\n",
+    "\n",
+    "                html.Div([\n",
+    "                    html.Div(children = [\n",
+    "                        html.H3('Substation:', style={'paddingRight': '30px', 'fontSize': 18, 'color': colors['text_sub'], 'font-weight': 'bold'}),\n",
+    "                        dcc.Dropdown(\n",
+    "                            id='subs_ticker',\n",
+    "                            options=[\n",
+    "                                {'label': i, 'value': i} for i in customer.Substation.unique()\n",
+    "                                ], multi=True,\n",
+    "                            value=[], \n",
+    "                            style={'color': colors['text']},\n",
+    "                            placeholder=\"Select a substation\",\n",
+    "                        )\n",
+    "                    ], style={\"width\": \"40%\"}, className=\"six columns\"),\n",
+    "\n",
+    "                    html.Div([\n",
+    "                        html.H3('Signal:', style={'paddingRight': '30px', 'fontSize': 18, 'color': colors['text_sub'], 'font-weight': 'bold'}),\n",
+    "                        dcc.Dropdown(\n",
+    "                            id='signal1_ticker',\n",
+    "                            options=[\n",
+    "                                {'label': i, 'value': i} for i in ['P_GEN', 'Q_GEN', 'S_GEN']\n",
+    "                                ], multi=True,\n",
+    "                            value=[],\n",
+    "                            style={'color': colors['text']}\n",
+    "                        ),\n",
+    "                    ], style={\"width\": \"40%\"}, className=\"six columns\"),\n",
+    "\n",
+    "                ], className=\"row\"),\n",
+    "\n",
+    "                html.Div([\n",
+    "                    html.Div([\n",
+    "                        html.H3('Weather site:', style={'paddingRight': '30px', 'fontSize': 18, 'color': colors['text_site'], 'font-weight': 'bold'}),\n",
+    "                        dcc.Dropdown(\n",
+    "                            id='sites_ticker',\n",
+    "                            options=[\n",
+    "                                {'label': i, 'value': i} for i in weather.Site.unique()\n",
+    "                                ], multi=True,\n",
+    "                            value=[],\n",
+    "                            style={'color': colors['text']},\n",
+    "                            placeholder=\"Select a weather site\"\n",
+    "                        ),\n",
+    "                    ], style={\"width\": \"40%\"}, className=\"six columns\"),\n",
+    "                    html.Div([\n",
+    "                        html.H3('Signal:', style={'paddingRight': '30px', 'fontSize': 18, 'color': colors['text_site'], 'font-weight': 'bold'}),\n",
+    "                        dcc.Dropdown(\n",
+    "                            id='signal2_ticker',\n",
+    "                            options=[\n",
+    "                                {'label': i, 'value': i} for i in ['TempOut', 'SolarRad', 'SolarEnergy', 'HiSolarRad']\n",
+    "                                ], multi=True,\n",
+    "                            value=[],\n",
+    "                            style={'color': colors['text']},\n",
+    "                        ),\n",
+    "                    ], style={\"width\": \"40%\"}, className=\"six columns\")\n",
+    "                ], className=\"row\"),\n",
+    "\n",
+    "                html.Div([\n",
+    "                    html.H3('Ratios:', style={'paddingRight': '30px', 'fontSize': 18, 'color': colors['text']}),\n",
+    "                    dcc.Dropdown(\n",
+    "                        id='ratio_ticker',\n",
+    "                        options=[\n",
+    "                            {'label': i, 'value': i} for i in [\n",
+    "                                'P_GEN/SolarRad', 'P_GEN/SolarEnergy',\n",
+    "                                'Q_GEN/SolarRad', 'Q_GEN/SolarEnergy',\n",
+    "                                'S_GEN/SolarRad', 'S_GEN/SolarEnergy']\n",
+    "                            ], multi=True,\n",
+    "                        value=[],\n",
+    "                        style={'color': colors['text']},\n",
+    "                    ),\n",
+    "                ], style={\"width\": \"85%\"}),\n",
+    "\n",
+    "                html.H3('Download displayed traces:', style={'paddingRight': '30px', 'fontSize': 18, 'color': colors['text']}),\n",
+    "                html.Div([\n",
+    "                    html.Div([\n",
+    "                        html.Button(\"Substations Traces\", id=\"btn1\"), Download(id=\"download1\")\n",
+    "                    ], className=\"six columns\", style={\"width\": \"20%\", 'color': colors['text']}),\n",
+    "                    html.Div([\n",
+    "                        html.Button(\"Weather Traces\", id=\"btn2\"), Download(id=\"download2\")\n",
+    "                    ], className=\"six columns\", style={\"width\": \"20%\", 'color': colors['text'], 'padding-left':'25%'})\n",
+    "                ], className=\"row\"),\n",
+    "\n",
+    "            ], className=\"six columns\"),\n",
+    "            #------------------\n",
+    "\n",
+    "            html.Div([\n",
+    "                dcc.Graph(id='map')\n",
+    "            ], className=\"six columns\"),\n",
+    "        ], className=\"row\", style={'marginTop': '5em','padding-left':'10%', 'padding-right':'15%', 'verical-align': 'center'}),\n",
+    "        #---------------\n",
+    "\n",
+    "        html.Div([\n",
+    "            dcc.Graph(id='graph')\n",
+    "        ], style={'padding-left':'1%', 'padding-right':'1%'}),\n",
+    "        ])\n",
+    "\n",
+    "])\n",
+    "\n",
+    "###########\n",
+    "@app.callback(Output(\"download1\", \"data\"),\n",
+    "[Input(\"btn1\", \"n_clicks\"),\n",
+    "Input('subs_ticker', 'value'),\n",
+    "Input('signal1_ticker', 'value')])\n",
+    "def func(n_clicks, selected_subs, selected_sig1):\n",
+    "    global button1_state\n",
+    "    if n_clicks is not None:\n",
+    "        if n_clicks > button1_state:\n",
+    "            selected_sig1.append('Substation')\n",
+    "            selected_sig1.append('datetime')\n",
+    "            sel_customer = customer[selected_sig1]\n",
+    "            sel_customer = sel_customer[sel_customer['Substation'].isin(selected_subs)]\n",
+    "\n",
+    "            button1_state += 1\n",
+    "\n",
+    "            return send_data_frame(sel_customer.to_excel, \"substations.xls\", index=False)\n",
+    "\n",
+    "\n",
+    "@app.callback(Output(\"download2\", \"data\"),\n",
+    "[Input(\"btn2\", \"n_clicks\"),\n",
+    "Input('sites_ticker', 'value'),\n",
+    "Input('signal2_ticker', 'value')])\n",
+    "def func(n_clicks, selected_sites, selected_sig2):\n",
+    "    global button2_state\n",
+    "    if n_clicks is not None:\n",
+    "        if n_clicks > button2_state:\n",
+    "            selected_sig2.append('Site')\n",
+    "            selected_sig2.append('datetime')\n",
+    "            sel_weather = weather[selected_sig2]\n",
+    "            sel_weather = sel_weather[sel_weather['Site'].isin(selected_sites)]\n",
+    "\n",
+    "            button2_state += 1\n",
+    "\n",
+    "            return send_data_frame(sel_weather.to_excel, \"weather.xls\", index=False)\n",
+    "################\n",
+    "\n",
+    "@app.callback(Output('map', 'figure'),\n",
+    "[Input('subs_ticker', 'value'),\n",
+    "Input('sites_ticker', 'value')])\n",
+    "def update_map(selected_subs, selected_sites):\n",
+    "\n",
+    "    fig = go.Figure()\n",
+    "\n",
+    "    lat = []\n",
+    "    lon = []\n",
+    "    text = []\n",
+    "    for sub in selected_subs:\n",
+    "        lat.append(locations[sub]['lat'])\n",
+    "        lon.append(locations[sub]['lon'])\n",
+    "        text.append(sub)\n",
+    "    for site in selected_sites:\n",
+    "        lat.append(locations[site]['lat'])\n",
+    "        lon.append(locations[site]['lon'])\n",
+    "        text.append(site)    \n",
+    "\n",
+    "    fig = go.Figure(go.Scattermapbox(\n",
+    "            lat=lat,\n",
+    "            lon=lon,\n",
+    "            mode='markers',\n",
+    "            marker=go.scattermapbox.Marker(\n",
+    "                size=14\n",
+    "            ),\n",
+    "            text=text,\n",
+    "        ))\n",
+    "\n",
+    "    fig.update_layout(\n",
+    "        hovermode='closest',\n",
+    "        mapbox=dict(\n",
+    "            #accesstoken=mapbox_token,\n",
+    "            bearing=0,\n",
+    "            style = 'open-street-map',\n",
+    "            center=go.layout.mapbox.Center(\n",
+    "                lat=51.89,\n",
+    "                lon=0.93\n",
+    "            ),\n",
+    "            pitch=0,\n",
+    "            zoom=5\n",
+    "        ),\n",
+    "        margin=dict(l=0, r=0, t=0, b=0),\n",
+    "        width=500, \n",
+    "        height=400\n",
+    "    )\n",
+    "\n",
+    "    return fig\n",
+    "\n",
+    "@app.callback(Output('graph', 'figure'),\n",
+    "[Input('subs_ticker', 'value'),\n",
+    "Input('signal1_ticker', 'value'),\n",
+    "Input('sites_ticker', 'value'),\n",
+    "Input('signal2_ticker', 'value'),\n",
+    "Input('ratio_ticker', 'value')])\n",
+    "def update_graph(selected_subs, selected_sig1, selected_sites, selected_sig2, selected_ratios):\n",
+    "    fig = go.Figure()\n",
+    "\n",
+    "    for x in selected_subs:\n",
+    "        for y in selected_sig1:\n",
+    "            fig.add_trace(go.Scattergl(x=customer[customer.Substation == x].datetime, y=customer[customer.Substation == x][y],\n",
+    "            name = str(x) + ' ' + str(y)))\n",
+    "\n",
+    "    for x in selected_sites:\n",
+    "        for y in selected_sig2:\n",
+    "            fig.add_trace(go.Scattergl(x=weather[weather.Site == x].datetime, y=weather[weather.Site == x][y],\n",
+    "            name = str(x) + ' ' + str(y)))\n",
+    "\n",
+    "    for sub in selected_subs:\n",
+    "        for site in selected_sites:\n",
+    "            for ratio in selected_ratios: # P_GEN/SolarRad\n",
+    "                weather_upsampled = weather[weather.Site == site].set_index('datetime').resample('10T').asfreq().reset_index()\n",
+    "                denom = weather_upsampled[ratio[6:]]\n",
+    "                num = customer[customer.Substation == sub][ratio[0:5]]\n",
+    "                fig.add_trace(go.Scattergl(x=customer[customer.Substation == sub].datetime, y=num.divide(denom).replace(np.inf, 0),\n",
+    "                name = str(sub) + ' ' + str(ratio[0:5]) + '\\\\' + str(site) + ' ' + str(ratio[6:])))\n",
+    "\n",
+    "    fig.update_traces(\n",
+    "        line={\"width\": 0.5},\n",
+    "        marker={\"size\": 3},\n",
+    "        mode=\"lines+markers\",\n",
+    "        showlegend=True\n",
+    "    )\n",
+    "\n",
+    "    fig.update_layout(\n",
+    "        plot_bgcolor=colors['background'],\n",
+    "        paper_bgcolor=colors['background'],\n",
+    "        font_color=colors['text'],\n",
+    "        dragmode=\"zoom\", template=\"plotly_white\", legend_orientation=\"v\", xaxis_rangeslider_visible=True,\n",
+    "        xaxis_rangeslider_thickness=0.1, xaxis_rangeslider_bgcolor=colors['text'],\n",
+    "        xaxis=dict(\n",
+    "            rangeselector=dict(\n",
+    "                buttons=list([\n",
+    "                    dict(count=1,\n",
+    "                    label=\"1d\",\n",
+    "                    step=\"day\",\n",
+    "                    stepmode=\"backward\"),\n",
+    "                    dict(count=1,\n",
+    "                    label=\"1m\",\n",
+    "                    step=\"month\",\n",
+    "                    stepmode=\"backward\"),\n",
+    "                    dict(step=\"all\")\n",
+    "                ])\n",
+    "            )\n",
+    "        ))\n",
+    "    \n",
+    "    return fig\n",
+    "\n",
+    "# Run app and display result inline in the notebook\n",
+    "app.run_server(mode='external', debug=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
