--- a/pv_analysis.ipynb
+++ b/pv_analysis.ipynb
@@ -93688,7 +93688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -93708,13 +93708,10 @@
     "import dash_html_components as html\n",
     "from dash_extensions import Download\n",
     "from dash_extensions.snippets import send_data_frame\n",
-    "from dash.dependencies import Input, Output\n",
+    "from dash.dependencies import Input, Output, State\n",
     "import numpy as np\n",
     "import pandas\n",
     "import json\n",
-    "\n",
-    "button1_state = 0\n",
-    "button2_state = 0\n",
     "\n",
     "customer_feather = 'data/customer_cleansed.feather'\n",
     "weather_feather = 'data/weather_cleansed.feather'\n",
@@ -93846,38 +93843,30 @@
     "###########\n",
     "@app.callback(Output(\"download1\", \"data\"),\n",
     "[Input(\"btn1\", \"n_clicks\"),\n",
-    "Input('subs_ticker', 'value'),\n",
-    "Input('signal1_ticker', 'value')])\n",
+    "State('subs_ticker', 'value'),\n",
+    "State('signal1_ticker', 'value')])\n",
     "def func(n_clicks, selected_subs, selected_sig1):\n",
-    "    global button1_state\n",
-    "    if n_clicks is not None:\n",
-    "        if n_clicks > button1_state:\n",
-    "            selected_sig1.append('Substation')\n",
-    "            selected_sig1.append('datetime')\n",
-    "            sel_customer = customer[selected_sig1]\n",
-    "            sel_customer = sel_customer[sel_customer['Substation'].isin(selected_subs)]\n",
     "\n",
-    "            button1_state += 1\n",
+    "    selected_sig1.append('Substation')\n",
+    "    selected_sig1.append('datetime')\n",
+    "    sel_customer = customer[selected_sig1]\n",
+    "    sel_customer = sel_customer[sel_customer['Substation'].isin(selected_subs)]\n",
     "\n",
-    "            return send_data_frame(sel_customer.to_excel, \"substations.xls\", index=False)\n",
+    "    return send_data_frame(sel_customer.to_excel, \"substations.xls\", index=False)\n",
     "\n",
     "\n",
     "@app.callback(Output(\"download2\", \"data\"),\n",
     "[Input(\"btn2\", \"n_clicks\"),\n",
-    "Input('sites_ticker', 'value'),\n",
-    "Input('signal2_ticker', 'value')])\n",
+    "State('sites_ticker', 'value'),\n",
+    "State('signal2_ticker', 'value')])\n",
     "def func(n_clicks, selected_sites, selected_sig2):\n",
-    "    global button2_state\n",
-    "    if n_clicks is not None:\n",
-    "        if n_clicks > button2_state:\n",
-    "            selected_sig2.append('Site')\n",
-    "            selected_sig2.append('datetime')\n",
-    "            sel_weather = weather[selected_sig2]\n",
-    "            sel_weather = sel_weather[sel_weather['Site'].isin(selected_sites)]\n",
     "\n",
-    "            button2_state += 1\n",
+    "        selected_sig2.append('Site')\n",
+    "        selected_sig2.append('datetime')\n",
+    "        sel_weather = weather[selected_sig2]\n",
+    "        sel_weather = sel_weather[sel_weather['Site'].isin(selected_sites)]\n",
     "\n",
-    "            return send_data_frame(sel_weather.to_excel, \"weather.xls\", index=False)\n",
+    "        return send_data_frame(sel_weather.to_excel, \"weather.xls\", index=False)\n",
     "################\n",
     "\n",
     "@app.callback(Output('map', 'figure'),\n",
